force-app/main/default/objects/Batch_Class_Configuration__mdt/Batch_Class_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Batch Class Configuration</label>
    <pluralLabel>Batch Class Configurations</pluralLabel>
</CustomObject>