force-app/main/default/objects/Batch_Class_Configuration__mdt/fields/Frequency_in_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Frequency_in_Minutes__c</fullName>
    <label>Frequency in Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>