force-app/main/default/objects/Batch_Class_Configuration__mdt/fields/Lookback_period__c.field-meta.xml
<CustomField>
    <fullName>Lookback_period__c</fullName>
    <label>Lookback period (In Hours)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>